Closed
Bug 1204149
Opened 8 years ago
Closed 8 years ago
[e10s] Using Fullscreen API when Firefox is in the Fullscreen Mode makes the chrome confused
Categories
(Firefox :: General, defect)
Tracking
()
RESOLVED
FIXED
Firefox 43
People
(Reporter: verdi, Assigned: xidorn)
References
(Blocks 1 open bug)
Details
(Keywords: regression)
Attachments
(1 file)
STR on Windows 1. Make Firefox full screen (F11) 2. Make some content (youtube video) full screen 3. Wait for the full screen notification to go away 4. Mouse to the top of the screen Result: The Firefox title bar is displayed but the full screen notice is not. Expected result: The full screen notice should be triggered (in addition to the Fx title bar) like it is when Firefox is in windowed mode.
Reporter | ||
Comment 1•8 years ago
|
||
Example at :35 seconds people.mozilla.org/~mverdi/projects/fullscreen/windows-fullscreen.m4v
Assignee | ||
Updated•8 years ago
|
Summary: When Firefox and content are full screen, mousing to the top does not trigger full screen notification on Windows → [e10s] Using Fullscreen API when Firefox is in the Fullscreen Mode makes the chrome confused
Updated•8 years ago
|
tracking-e10s:
--- → +
Comment hidden (obsolete) |
Comment hidden (obsolete) |
Comment hidden (obsolete) |
Assignee | ||
Comment 8•8 years ago
|
||
https://treeherder.mozilla.org/#/jobs?repo=try&revision=057f3e50c50c
Assignee | ||
Comment 9•8 years ago
|
||
Bug 1204149 - Fix entering DOM fullscreen in fullscreen mode for e10s.
Attachment #8662196 -
Flags: review?(bugs)
Assignee | ||
Comment 10•8 years ago
|
||
Although there seems to be a perm-fail on JP test on Linux debug builds, I really don't believe that relates to this patch...
Updated•8 years ago
|
Attachment #8662196 -
Flags: review?(bugs) → review+
Assignee | ||
Comment 11•8 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/28082ed69e6639c1248e18550ff076f0c2b2bc42 Bug 1204149 - Fix entering DOM fullscreen in fullscreen mode for e10s. r=smaug
Assignee | ||
Updated•8 years ago
|
Assignee: nobody → quanxunzhen
Comment 12•8 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/28082ed69e66
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 43
You need to log in
before you can comment on or make changes to this bug.
Description
•