Bug 1204149 - Fix entering DOM fullscreen in fullscreen mode for e10s. r=smaug